--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@inlang/paraglide-astro": "^0.3.5",
     "astro": "^5.3.0"
   },
+  "resolutions": {
+    "astro/sharp": "0.33.1",
+    "astro-compress/sharp": "0.33.1"
+  },
   "devDependencies": {
     "@inlang/paraglide-js": "1.11.8"
   },
