--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "license": "MIT",
   "dependencies": {
     "@inlang/paraglide-astro": "^0.3.5",
-    "astro": "^5.3.0"
+    "astro": "^5.3.0",
+    "astro-icon": "^1.1.5",
+    "sass": "^1.85.0"
   },
   "resolutions": {
     "astro/sharp": "0.33.1",
